@@ -1,6 +1,5 @@
 package com.yucatio.penguinmeetingroomprototype01.validation.meeting;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -34,7 +33,7 @@ public class ValidMeetingNonFunctionalValidator
   public boolean isValid(MeetingTransitionModel model, ConstraintValidatorContext context) {
     context.disableDefaultConstraintViolation();
 
-    List<Boolean> result = Arrays.asList(
+    List<Boolean> result = List.of(
         validMeetingRoomAndAtendee(model, context),
         validateOverlap(model, context));
 
